[package]
name = "rusflight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
three-d = "0.16.3"
three-d-asset = { version="0.6", features = ["obj", "png", "jpeg", "http"] }
tokio = "1.34.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

